@@ -57,10 +57,6 @@
 	with altered RPMTAG_FILESTATES data. get/del/add sequence
 	is needed instead.
     - jbj: check that rpmbuild --sign is functional, or eliminate the option.
-    - jbj: parsing error paths (like missing source or patch file) are
-	returning rpmRC in some cases now, with accidental collision with
-	PART_FOO values that drive the spec file parser. Renumbering enum
-	rpmParseState to avoid the collisions should fix most of the problem.
     - jbj: choose between db-4.5.20 and db-4.6.21. db-4.5.20 may have fewer
 	upgrade/downgrade issues because of the db-4.6.21 DB_HASH change,
 	but rpm-5.0 already uses DB_BTREE for Packages.
