@@ -476,8 +476,12 @@ int parseSpec(rpmts ts, const char *specFile, const char *rootURL,
     /* which handles the initial entry into a spec file.         */
     
     /*@-infloops@*/	/* LCL: parsePart is modified @*/
-    while (parsePart < PART_LAST && parsePart > PART_NONE) {
+    while (parsePart > PART_NONE) {
+	int goterror = 0;
 	switch (parsePart) {
+	default:
+	    goterror = 1;
+	    /*@switchbreak@*/ break;
 	case PART_PREAMBLE:
 	    parsePart = parsePreamble(spec, initialPackage);
 	    initialPackage = 0;
@@ -522,7 +526,7 @@ int parseSpec(rpmts ts, const char *specFile, const char *rootURL,
 	    /*@switchbreak@*/ break;
 	}
 
-	if (parsePart < PART_NONE || parsePart >= PART_LAST) {
+	if (goterror || parsePart >= PART_LAST) {
 	    spec = freeSpec(spec);
 	    return parsePart;
 	}
